tdf#127272 Writer crash issue resolve

Change-Id: Ibbdc10cc11170b8d8d55c42e6626d064ce4ef702
Reviewed-on: https://gerrit.libreoffice.org/78427
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins